--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   "dependencies": {
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
-    "next": "14.2.5",
+    "next": "^14.2.33",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5.5.4"
   }
 }
